# llvm-project

./: .cproject  .gitattributes  .gitlab-ci.yml  .project  0001-clang-doc-add-e2e-unit-test.patch  Makefile  config.sh  expand-modular-headers-ppcallbacks.cpp.diff  flake.nix  oggenc.s  out.txt  refactor.diff  test-cfg-only.dot  test-full.dot  tests.sh  tmp
.ci/: generate-buildkite-pipeline-premerge  generate_test_report.py  lit-wrapper.py  monolithic-linux.sh  monolithic-windows.sh
.ci/infrastructure/: linux_runner_values.yaml  main.tf  windows_runner_values.yaml
.ci/metrics/: metrics.py
.github/workflows/: bolt-tests.yml  ci-post-commit-analyzer.yml  docs.yml  libclang-python-tests.yml  libcxx-build-and-test.yaml  libcxx-build-containers.yml  libcxx-restart-preempted-jobs.yaml  llvm-project-tests.yml  pr-code-format.yml  precommit-windows.yml  release-asset-audit.py  release-binaries.yml  release-tasks.yml
bolt/: CMakeLists.txt
bolt/docs/: BAT.md  CommandLineArgumentReference.md  generate_doc.py
bolt/lib/: CMakeLists.txt
bolt/lib/Core/: BinaryContext.cpp  BinaryEmitter.cpp  BinaryFunction.cpp  DIEBuilder.cpp  DebugData.cpp  ParallelUtilities.cpp  Relocation.cpp
bolt/lib/Passes/: BinaryPasses.cpp  Instrumentation.cpp  LongJmp.cpp  ReorderFunctions.cpp
bolt/lib/Profile/: BoltAddressTranslation.cpp  DataAggregator.cpp  StaleProfileMatching.cpp
bolt/lib/Rewrite/: DWARFRewriter.cpp  JITLinkLinker.cpp  LinuxKernelRewriter.cpp  RewriteInstance.cpp
bolt/lib/RuntimeLibs/: RuntimeLibrary.cpp
bolt/lib/Utils/: CommandLineOpts.cpp
bolt/runtime/: CMakeLists.txt
bolt/test/: bad-exe.test  bolt-info.test  invalid-profile.test  lit.cfg.py  merge-fdata-lbr-mode.test  merge-fdata-mixed-mode.test  merge-fdata-no-lbr-mode.test  no-relocs.test  pie.test  re-optimize.test  shared-object.test
clang/: CMakeLists.txt
clang-tools-extra/clang-doc/: BitcodeReader.cpp  HTMLGenerator.cpp  Mapper.cpp  Representation.cpp  Representation.h  Serialize.cpp
clang-tools-extra/clang-reorder-fields/: ReorderFieldsAction.cpp
clang-tools-extra/clang-tidy/: ClangTidyCheck.cpp  ClangTidyCheck.h  ClangTidyDiagnosticConsumer.cpp  ClangTidyDiagnosticConsumer.h  ClangTidyOptions.cpp  add_new_check.py
clang-tools-extra/clangd/: CMakeLists.txt  ClangdLSPServer.cpp  ClangdLSPServer.h  ClangdServer.cpp  ClangdServer.h  CodeComplete.cpp  CollectMacros.cpp  Config.h  ConfigCompile.cpp  ConfigFragment.h  ConfigYAML.cpp  Diagnostics.cpp  FindSymbols.cpp  FindTarget.cpp  Headers.h  Hover.cpp  IncludeCleaner.cpp  InlayHints.cpp  JSONTransport.cpp  ModulesBuilder.cpp  ModulesBuilder.h  ParsedAST.cpp  Preamble.cpp  ProjectModules.h  ProjectModulesCache.cpp  ProjectModulesCache.h  Protocol.cpp  Protocol.h  ScanningProjectModules.cpp  SourceCode.cpp  SourceCode.h  TidyFastChecks.inc  TidyProvider.cpp  XRefs.cpp
clang-tools-extra/docs/: ReleaseNotes.rst
clang/bindings/python/: .gitignore  pyproject.toml
clang/bindings/python/clang/: cindex.py  ctyped.py
clang/bindings/python/tests/cindex/: test_cursor.py  test_type.py
clang/docs/: ClangFormat.rst  ClangFormatStyleOptions.rst  ClangLinkerWrapper.rst  ClangNVLinkWrapper.rst  ClangOffloadBundler.rst  DataFlowSanitizer.rst  LanguageExtensions.rst  (+12 more)
compiler-rt/: CMakeLists.txt
flang/: CMakeLists.txt
libc/: CMakeLists.txt
libc/benchmarks/gpu/timing/: CMakeLists.txt  timing.h
libc/benchmarks/gpu/timing/nvptx/: CMakeLists.txt  timing.h
libc/lib/: CMakeLists.txt
libclc/: CMakeLists.txt
libcxx/: .clang-format  .clang-tidy  CMakeLists.txt
libcxxabi/: CMakeLists.txt
libunwind/: CMakeLists.txt
lld/: CMakeLists.txt
lldb/: CMakeLists.txt
llvm/: CMakeLists.txt  Maintainers.md  Maintainers.rst  opt-switch-type.ll
mlir/: CMakeLists.txt
offload/: CMakeLists.txt
offload/API/: APIDefs.td  Example.td  OffloadAPI.td
offload/DeviceRTL/: CMakeLists.txt
offload/DeviceRTL/include/: DeviceTypes.h  DeviceUtils.h  Interface.h  LibC.h  Mapping.h  State.h  Synchronization.h  Workshare.h
offload/DeviceRTL/src/: Configuration.cpp  Debug.cpp  DeviceUtils.cpp  Kernel.cpp  Mapping.cpp  Misc.cpp  Reduction.cpp  Synchronization.cpp  Tasking.cpp  Utils.cpp  Workshare.cpp
offload/cmake/: OpenMPTesting.cmake
offload/cmake/caches/: AMDGPUBot.cmake
offload/include/: OffloadEntry.h  PluginManager.h  omptarget.h
offload/include/Shared/: APITypes.h  EnvironmentVar.h
offload/plugins-nextgen/: CMakeLists.txt
offload/plugins-nextgen/amdgpu/: CMakeLists.txt
offload/plugins-nextgen/amdgpu/src/: rtl.cpp
offload/plugins-nextgen/common/: CMakeLists.txt
offload/plugins-nextgen/common/include/: ErrorReporting.h  MemoryManager.h  PluginInterface.h  RPC.h
offload/plugins-nextgen/common/src/: PluginInterface.cpp  RPC.cpp
offload/plugins-nextgen/cuda/: CMakeLists.txt
offload/plugins-nextgen/cuda/src/: rtl.cpp
offload/plugins-nextgen/host/: CMakeLists.txt
offload/plugins-nextgen/host/src/: rtl.cpp
offload/plugins-nextgen/mpi/: CMakeLists.txt
offload/plugins-nextgen/mpi/src/: ProxyDevice.cpp  rtl.cpp
offload/src/: CMakeLists.txt  PluginManager.cpp  interface.cpp  omptarget.cpp
offload/src/KernelLanguage/: API.cpp
offload/test/: CMakeLists.txt  lit.cfg
offload/test/offloading/: bug49334.cpp  default_thread_limit.c  dynamic-schedule.cpp  ompx_bare_ballot_sync.c  ompx_bare_multi_dim.cpp  ompx_bare_shfl_down_sync.cpp  schedule.c
offload/test/offloading/CUDA/: basic_api_malloc_free.cu  basic_launch.cu  basic_launch_blocks_and_threads.cu  basic_launch_multi_arg.cu
offload/test/offloading/fortran/: dump_map_tables.f90  implicit-record-field-mapping.f90
offload/test/sanitizer/: double_free.c  double_free_racy.c  free_host_ptr.c  kernel_crash.c  kernel_crash_async.c  kernel_crash_many.c  kernel_crash_single.c  kernel_trap.c  kernel_trap.cpp  kernel_trap_async.c  kernel_trap_many.c
offload/tools/kernelreplay/: llvm-omp-kernel-replay.cpp
offload/tools/offload-tblgen/: APIGen.cpp  CMakeLists.txt  GenCommon.hpp  Generators.hpp  RecordTypes.hpp  ValidationGen.cpp  offload-tblgen.cpp
openmp/: CMakeLists.txt
runtimes/: CMakeLists.txt
(+15917 files in other folders)
